--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import "../styles/global.css";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,7 +9,11 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<link
+			rel="stylesheet"
+			href="https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&display=swap"
+		/>
+		<title>LeoshSoft - Desarrollo de Software</title>
 	</head>
 	<body>
 		<slot />
@@ -18,5 +26,11 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+	}
+
+	.container {
+		width: 1280px;
+		height: 100%;
+		margin: 0 auto;
 	}
 </style>
