--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,36 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Hero from "../components/Slider";
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header";
+import Services from "../components/Services.astro";
+import PortfolioGrid from "../components/PortfolioGrid.astro";
+import TestimonialCard from "../components/TestimonialCard.astro";
+import BlogCard from "../components/BlogCard.astro";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import { getCollection } from "astro:content";
+
+const posts = await getCollection("blog");
+const latest = posts.slice(0, 3);
+
+import FAQ from "../components/FAQ.astro";
+import ContactForm from "../components/ContactForm.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout>
-	<Welcome />
+	<Header client:load />
+	<Hero client:load />
+	<Services />
+	<PortfolioGrid />
+	<TestimonialCard />
+	<section class="max-w-6xl mx-auto px-6 py-16">
+		<h2 class="text-3xl font-bold mb-8">Últimos artículos</h2>
+
+		<div class="grid gap-10 sm:grid-cols-2 lg:grid-cols-3">
+			{latest.map((post) => <BlogCard post={post} />)}
+		</div>
+	</section>
+	<FAQ />
+	<ContactForm />
+	<Footer />
 </Layout>
