--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,18 +3,18 @@ import "../styles/global.css";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<link
 			rel="stylesheet"
 			href="https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&display=swap"
 		/>
-		<title>LeoryenSoft - Desarrollo de Software</title>
 	</head>
+
 	<body>
 		<slot />
 	</body>
