--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,8 +5,10 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 const posts = await getCollection("blog");
 ---
 
-<BaseLayout title="Blog sobre desarrollo web, SEO y negocios (2025) | LeoryenSoft">
-    <section class="max-w-5xl mx-auto px-6 py-16">
+<BaseLayout
+    title="Blog sobre desarrollo web, SEO y negocios (2025) | LeoryenSoft"
+>
+    <section class="max-w-6xl mx-auto px-6 py-16 mt-[80px]">
         <h1 class="text-4xl font-bold text-gray-900 mb-10">
             Blog sobre desarrollo web, SEO y negocios (2025)
         </h1>
