--- a/src/pages/portafolio/index.astro
+++ b/src/pages/portafolio/index.astro
@@ -6,7 +6,7 @@ const projects = await getCollection("portafolio");
 ---
 
 <BaseLayout title="Portafolio de proyectos">
-    <section class="max-w-6xl mx-auto px-6 py-16">
+    <section class="max-w-6xl mx-auto px-6 py-16 mt-[80px]">
         <h1 class="text-4xl font-bold mb-10">Portafolio</h1>
 
         <div class="grid gap-10 sm:grid-cols-2 lg:grid-cols-3">
