--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,4 @@
----
-import gradients from "../constants/gradients";
----
-
-<footer class="p bg-gray-900 py-12 mt-20 text-gray-300 relative">
+<footer class="p bg-primary py-12 mt-20 text-gray-300 relative">
     <div class="relative z-10">
         <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-10">
             <!-- Sección LeoryenSoft -->
@@ -19,21 +15,17 @@ import gradients from "../constants/gradients";
                     Navegación
                 </h4>
                 <ul class="space-y-2">
-                    <li><a class="hover:text-white" href="/">Inicio</a></li>
                     <li>
-                        <a class="hover:text-white" href="/servicios"
-                            >Servicios</a
-                        >
+                        <a class="hover:text-white" href="/#inicio">Inicio</a>
                     </li>
                     <li>
-                        <a class="hover:text-white" href="/portafolio"
-                            >Portafolio</a
-                        >
+                        <a class="hover:text-white" href="/servicios">Servicios</a>
                     </li>
-                    <li><a class="hover:text-white" href="/blog">Blog</a></li>
                     <li>
-                        <a class="hover:text-white" href="/contacto">Contacto</a
-                        >
+                        <a class="hover:text-white" href="/portafolio">Portafolio</a>
+                    </li>
+                    <li>
+                        <a class="hover:text-white" href="/blog">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -55,7 +47,7 @@ import gradients from "../constants/gradients";
                     <li>
                         <a
                             class="hover:text-white"
-                            href="https://wa.me/+51997676432"
+                            href="https://wa.link/4v2a4j"
                             target="_blank"
                             rel="noopener noreferrer">WhatsApp</a
                         >
