--- a/src/pages/proyectos/index.astro
+++ b/src/pages/proyectos/index.astro
@@ -2,18 +2,18 @@
 import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
-const projects = await getCollection("portafolio");
+const projects = await getCollection("proyectos");
 ---
 
-<BaseLayout title="Portafolio de proyectos">
+<BaseLayout title="Proyectos">
     <section class="max-w-6xl mx-auto px-6 py-16 mt-[80px]">
-        <h1 class="text-4xl font-bold mb-10">Portafolio</h1>
+        <h1 class="text-4xl font-bold mb-10">Proyectos</h1>
 
         <div class="grid gap-10 sm:grid-cols-2 lg:grid-cols-3">
             {
                 projects.map((project) => (
                     <a
-                        href={`/portafolio/${project.id}`}
+                        href={`/proyectos/${project.id}`}
                         class="block border rounded-xl p-6 hover:shadow-lg transition bg-white"
                     >
                         <img
