--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,3 +1,6 @@
 ---
-return Astro.redirect("/es");
+const acceptLang = Astro.request.headers.get("accept-language") ?? "";
+const lang = acceptLang.includes("en") ? "en" : "es";
+
+throw Astro.redirect(`/${lang}`, 302);
 ---
